--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -12,7 +12,14 @@
 
         <h1>Welcome to the 49er Notes App!</h1>
 
+        <nav>
+            <a href="{{url_for('index')}}" Home></a> || 
+            <a href="{{url_for('get_notes')}}">My Notes</a>
+        </nav>
+
         <h2>Use this site to maintain and organize your notes.</h2>
+
+        <nav> <a href="/notes"> My notes </a> </nav>
 
         <h3>Course notes</h3>
 
