--- a/flask_app/templates/notes.html
+++ b/flask_app/templates/notes.html
@@ -11,6 +11,11 @@
     <body>
         <h1>Listing notes</h1>
 
+        <nav>
+            <a href="{{url_for('index')}}" Home></a> || 
+            <a href="{{url_for('get_notes')}}">My Notes</a>
+        </nav>
+
         <table>
             <tr>
                 <th>Title</th>
@@ -18,7 +23,7 @@
             </tr>
             {% for key, value in notes.items() %}
             <tr>
-                <td>{{ value.title }}</td>
+                <td><a href="notes/{{key}}">{{ value.title }}</a></td>
                 <td>{{ value.date }}</td>
             </tr>
             {% endfor %}
