--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
 
-        <h1>Welcome to the 49er Notes App!</h1>
+        <h1>Welcome {{user.name}} to the 49er Notes App!</h1>
 
         <nav>
-            <a href="{{url_for('index')}}" Home></a> || 
+            <a href="{{url_for('index')}}" >Home</a> || 
             <a href="{{url_for('get_notes')}}">My Notes</a>
         </nav>
 
