--- a/flask_app/templates/notes.html
+++ b/flask_app/templates/notes.html
@@ -8,13 +8,14 @@
         <!-- styles -->
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
-    <body>
 
-        <nav>
-            <a href="{{url_for('index')}}" >Home</a> || 
-            <a href="{{url_for('get_notes')}}">My Notes</a> ||
-            <a href="{{url_for('new_note')}}">Add note</a>
-        </nav>
+    <nav>
+        <a href="{{url_for('index')}}" >Home</a> || 
+        <a href="{{url_for('get_notes')}}">My Notes</a> ||
+        <a href="{{url_for('new_note')}}">Add note</a>
+    </nav>
+
+    <body>
 
         <h1>Welcome {{user.name}} to the 49er Notes App!</h1>
         
@@ -29,6 +30,7 @@
             <tr>
                 <td><a href="{{ url_for('get_note', note_id = note.id)}}">{{ note.title }}</a></td>
                 <td>{{ note.date }}</td>
+                <td><a href="{{ url_for('get_note', note_id = note.id)}}">Edit</a></td>
             </tr>
             {% endfor %}
         </table>
