--- a/flask_app/templates/notes.html
+++ b/flask_app/templates/notes.html
@@ -17,7 +17,7 @@
 
     <body>
 
-        <h1>Welcome {{user.name}} to the 49er Notes App!</h1>
+        <h1>Welcome {{user}} to the 49er Notes App!</h1>
         
         <h1>Listing notes</h1>
 
