--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -12,11 +12,23 @@
 
         <h1>Welcome {{user}} to the 49er Notes App!</h1>
 
+       {% if user %}
         <nav>
+            <a href ="{{ url_for('logout')}}">Logout</a>
+        </nav>
+
+        {% else %}
+            <nav>
+                <a href ="{{ url_for('login')}}">Login</a>
+                <a href ="{{ url_for('register')}}">Register</a>
+            </nav>
+        {% endif %}
+
+        <!--<nav>
             <a href="{{url_for('index')}}" >Home</a> || 
             <a href="{{url_for('get_notes')}}">My Notes</a> ||
             <a href="{{url_for('new_note')}}">Add note</a>
-        </nav>
+        </nav> -->
 
         <h2>Use this site to maintain and organize your notes.</h2>
 
