--- a/flask_app/templates/notes.html
+++ b/flask_app/templates/notes.html
@@ -9,10 +9,14 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
 
-    <nav>
+    <!--<nav>
         <a href="{{url_for('index')}}" >Home</a> || 
         <a href="{{url_for('get_notes')}}">My Notes</a> ||
         <a href="{{url_for('new_note')}}">Add note</a>
+    </nav> -->
+
+    <nav>
+        <a href="{{url_for('logout') }}"> Logout </a>
     </nav>
 
     <body>
