--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -9,11 +9,23 @@
     <body>
         <div class="navdiv">
 
+ {% if user %}
+        <nav>
+            <a href ="{{ url_for('logout')}}">Logout</a>
+        </nav>
+
+        {% else %}
             <nav>
+                <a href ="{{ url_for('login')}}">Login</a>
+                <a href ="{{ url_for('register')}}">Register</a>
+            </nav>
+        {% endif %}
+
+            <!--<nav>
                 <a href="{{ url_for('index') }}"> Home</a> ||
                 <a href="{{ url_for('get_notes') }}"> My Notes</a> ||
                 <a href="{{ url_for('new_note') }}">Add Note</a>
-            </nav>
+            </nav> -->
         
         </div>
         <h1>Welcome {% if user %}{{user}}{% endif %}to the 49er Notes App!</h1>
